--- a/server/client/public/index.html
+++ b/server/client/public/index.html
@@ -16,19 +16,19 @@
   <body>
     <style>
       html {
-          height: 100%;
-          min-height: 100%;
+          /* height: 100%; */
+          /* min-height: 100%; */
           position: relative;
           /* height: 100vh; */
           margin: 0;
           /* overflow:auto; */
       }
       body {
-          height: 100%;
+          /* height: 100%; */
           position: relative;
       }
       #root {
-          height: 100%;
+          /* height: 100%; */
           /* height: 100vh; */
       }
     </style>
